@@ -2,6 +2,11 @@ fidoconfig 0.91
 ---------------
 
 ----- cvs ci ------
+Wed May 17 18:39:00 UTC 2000
+sms:
+* fixed double deallocation of viaStr in new routing code
+
+----- cvs ci ------
 Wed May 17 21:40:28 NOVST 2000
 max (patch from Alex Bronin):
 * added token busyFileDir for htick
